--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -187,7 +187,7 @@
 
           <p>
             Questions? Reply to this email or visit our
-            <%= link_to "help center", root_url %>
+            <%= link_to "help center", contact_url %>
           </p>
           
           <p style="margin-top: 16px;">
