--- a/app/views/layouts/mailer.text.erb
+++ b/app/views/layouts/mailer.text.erb
@@ -5,7 +5,7 @@ GLEANIA - Your Intelligent Interview Assistant
 <%= yield %>
 
 -------------------------------------
-Questions? Reply to this email or visit <%= root_url %>
+Questions? Reply to this email or visit <%= contact_url %>
 
 Privacy Policy: <%= privacy_url %>
 Terms of Service: <%= terms_url %>
