--- a/app/views/layouts/developer.html.erb
+++ b/app/views/layouts/developer.html.erb
@@ -11,9 +11,8 @@
 
     <%= yield :head %>
 
-    <link rel="icon" href="/icon.png" type="image/png">
-    <link rel="icon" href="/icon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="/icon.png">
+    <link rel="icon" href="<%= asset_path('logo/logo.png') %>" type="image/png">
+    <link rel="apple-touch-icon" href="<%= asset_path('logo/logo.png') %>">
 
     <%= stylesheet_link_tag :app, "data-turbo-track": "reload" %>
     <%= stylesheet_link_tag "rouge", "data-turbo-track": "reload" %>
