--- a/app/views/resume_skills/_skill_row.html.erb
+++ b/app/views/resume_skills/_skill_row.html.erb
@@ -66,7 +66,7 @@
     <span
       class="
         inline-flex items-center px-2 py-0.5 rounded text-xs font-medium
-        bg-gray-100 text-gray-700 dark:bg-dark-700 dark:text-gray-300
+        bg-gray-100 text-gray-700 dark:bg-gray-700 dark:text-gray-200
       "
     >
       <%= resume_skill.category || "Other" %>
